tests/ok/operators-float-suffixes.ari
fn main() -> i64 {
  let one = 1f32;
  let ten = 1.0e+1f64;
  let half: f32 = 0.5f32;
  let precise: f64 = 2.5f64;
  return 0;
}
