tests/errors/associated-type-decl-planned.ari
trait Source {
  type Item;

  fn next(self) -> i64
}

fn main() -> i64 {
  return 0;
}
